Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <img src="image/profile pic.jpeg" alt="Patrick I." class="profile-img"
                 width="30%"
                 height="50%">
-                <p>Hi! I'm a passionate web developer with expertise in front-end and back-end development. I create responsive, modern websites that help businesses thrive. I specialize in crafting interactive user experiences and developing scalable web applications.</p>
+                <p>Hi! I'm a passionate web developer with expertise in both front-end and back-end development. I specialize in creating responsive, modern, and visually appealing websites that help businesses thrive in the digital space. With a strong foundation in HTML, CSS, JavaScript, and Python, I craft interactive user experiences that are not only engaging but also highly functional. My back-end development skills include working with frameworks like Django and Flask, enabling me to build robust and scalable web applications. Additionally, I have experience in automation, data processing, and API integration using Python. Whether it's developing a sleek portfolio, a dynamic e-commerce platform, or a powerful web application, I bring creativity, problem-solving skills, and a user-centric approach to every project.</p>
+
+
             </div>
         </div>
     </section>
@@ -37,7 +39,7 @@
         <h2>My Projects</h2>
         <div class="projects-container">
             <div class="project">
-                <img src="images/portfolio-preview.png" alt="Portfolio Website">
+                <img src="image/portfolio.jpeg" alt="Portfolio Website">
                 <h3>Personal Portfolio</h3>
                 <p>A modern portfolio to showcase my skills, built with HTML, CSS, and JavaScript.</p>
                 <a href="https://github.com/greenyboy7/portpolio" target="_blank">View on GitHub</a>
