Fix GitHub link for flashy hotel project

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="image/businesslanding.jpeg" alt="Business Landing Page">
                 <h3>Flashy hotel website</h3>
                 <p>A professional and modern hotel website with automated booking and payment methodes</p>
-                <a href="https://github.com/greenyboy7/flashy hotel" target="_blank">View on GitHub</a>
+                <a href="https://github.com/greenyboy7/flashy-hotel.git" target="_blank">View on GitHub</a>
             </div>
     </section>
     
